# mcp_lab

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  requirements-docs.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: windows-support.agent.md
.github/skills/page-banners/: SKILL.md
.github/skills/windows-docs/: SKILL.md
.github/skills/windows-scripts/: SKILL.md
.github/workflows/: dependabot-auto-merge.yml  docs.yml
docs/: copilot-client.md  index.md  prerequisites.md
docs/modules/: base-module.md  finish.md  module1-identity.md  module5-supply-chain.md  summit.md
docs/modules/gateway/: api-governance.md  index.md  section1-gateway-governance.md  section2-content-safety.md  section3-network-security.md
docs/modules/io-security/: index.md  section1-vulnerabilities.md  section2-layer2-security.md  section3-validation.md
docs/modules/monitoring/: index.md  production-deploy.md  reference.md  section1-apim-logging.md  section2-function-observability.md  section3-dashboards-alerts.md  section4-incident-response.md
docs/overrides/: main.html
docs/resources/: contributing.md  infrastructure.md  scripts.md
docs/stylesheets/: extra.css
levels/base/: README.md  SETUP.md  pyproject.toml
levels/base/exploits/: README.md  launch-inspector-http.sh  test_secure.py  test_vulnerable.py
levels/base/secure-server/: .env.example  README.md  pyproject.toml
levels/base/secure-server/src/: __init__.py  data.py  server.py
levels/base/vulnerable-server/: .env.example  README.md  pyproject.toml
levels/base/vulnerable-server/src/: __init__.py  data.py  server.py
levels/gateway/: README.md  azure.yaml
levels/gateway/infra/: main.bicep  main.json  main.parameters.json
levels/gateway/samples/mcp-custom-headers/: .env.sample  README.md  agent_framework_headers.py  direct_mcp_client.py  pyproject.toml  test_live.py
levels/gateway/scripts/: 1.1-deploy.ps1  1.1-deploy.sh  1.1-exploit.ps1  1.1-exploit.sh  1.1-fix.ps1  1.1-fix.sh  1.1-validate.ps1  1.1-validate.sh  1.2-deploy.ps1  1.2-deploy.sh  1.2-exploit.ps1  1.2-exploit.sh  1.2-fix.ps1  1.2-fix.sh  1.2-validate.ps1  1.2-validate.sh  1.3-deploy.ps1  1.3-deploy.sh  1.3-exploit.ps1  1.3-exploit.sh  1.3-fix.ps1  1.3-fix.sh  1.3-validate.ps1  1.3-validate.sh  1.4-fix.ps1  1.4-fix.sh  2.1-fix.ps1  2.1-fix.sh  2.1-validate.ps1  2.1-validate.sh  3.1-exploit.ps1  3.1-exploit.sh  3.1-fix.ps1  3.1-fix.sh  3.1-validate.ps1  3.1-validate.sh  get-mcp-token.ps1  get-mcp-token.sh  update-auth-callback-policy.py
levels/gateway/tests/: curl-examples-Workshop.ps1  curl-examples-Workshop.sh  curl-examples-paths.ps1  curl-examples-paths.sh  test-mcp-tools.ps1  test-mcp-tools.sh  test-oauth-flow.ps1  test-oauth-flow.sh  (+2 more)
levels/identity/: README.md  azure.yaml  pyproject.toml
levels/identity/demo-client/: .gitignore  README.md  mcp_prm_client.py  pyproject.toml
levels/identity/infra/: abbreviations.json  main.bicep  main.parameters.json
levels/identity/infra/modules/: container-app.bicep  container-apps-env.bicep  container-registry.bicep  keyvault.bicep  log-analytics.bicep  managed-identity.bicep
levels/identity/scripts/: configure-secure-server.ps1  configure-secure-server.sh  enable-managed-identity.ps1  enable-managed-identity.sh  generate-client-secret.ps1  generate-client-secret.sh  get-mcp-token-pkce.ps1  get-mcp-token-pkce.sh  get-mcp-token.ps1  get-mcp-token.sh  migrate-to-keyvault.ps1  migrate-to-keyvault.sh  register-entra-app.ps1  register-entra-app.sh  verify-prm.ps1  verify-prm.sh  verify-security.ps1  verify-security.sh
levels/identity/scripts/hooks/: preprovision.ps1  preprovision.sh
levels/identity/secure-server/: .env.example  pyproject.toml
levels/identity/secure-server/src/: __init__.py  server.py
levels/identity/vulnerable-server/: .env.example  Dockerfile  pyproject.toml
levels/identity/vulnerable-server/src/: __init__.py  server.py
levels/io-security/: README.md  azure.yaml  pyproject.toml
levels/io-security/infra/: main.bicep  main.parameters.json
levels/io-security/infra/modules/: ai-services.bicep  apim.bicep  container-apps-env.bicep  container-apps.bicep  container-registry.bicep  content-safety.bicep  function-app.bicep  log-analytics.bicep  region-selector.bicep
levels/io-security/infra/policies/: Workshop-mcp-full-io-security.xml  base-oauth-contentsafety.xml  full-io-security.xml  path-api-output-sanitization.xml  path-mcp-input-security.xml  prm-metadata.xml
levels/io-security/infra/waypoints/: initial-api-setup.bicep
levels/io-security/scripts/: 1.1-exploit-injection.ps1  1.1-exploit-injection.sh  1.1-exploit-pii.ps1  1.1-exploit-pii.sh  1.2-deploy-function.ps1  1.2-deploy-function.sh  1.2-enable-io-security.ps1  1.2-enable-io-security.sh  1.3-validate-injection.ps1  1.3-validate-injection.sh  1.3-validate-pii.ps1  1.3-validate-pii.sh  get-mcp-token.ps1  get-mcp-token.sh
levels/io-security/scripts/hooks/: postprovision.ps1  postprovision.sh  preprovision.ps1  preprovision.sh
levels/io-security/security-function/: function_app.py  local.settings.json.sample  requirements.txt
levels/io-security/security-function/shared/: __init__.py
levels/io-security/servers/sherpa-mcp-server/: Dockerfile  pyproject.toml
levels/io-security/servers/sherpa-mcp-server/src/: sanitizer.py  server.py
levels/io-security/servers/trail-api/: pyproject.toml
levels/io-security/servers/trail-api/src/: data.py  main.py  models.py
levels/io-security/servers/trail-api/src/routes/: paths.py  permits.py
levels/io-security/tests/: curl-examples.ps1  curl-examples.sh  get-mcp-token.ps1  get-mcp-token.sh  paths-mcp.http
levels/monitoring/: README.md  azure.yaml  pyproject.toml
levels/monitoring/servers/trail-api/: pyproject.toml
levels/monitoring/servers/trail-api/src/: __init__.py  data.py  main.py  models.py
levels/monitoring/servers/trail-api/src/routes/: permits.py
levels/supply-chain/: README.md  pyproject.toml
levels/supply-chain/secure-setup/: README.md
levels/supply-chain/vulnerable-setup/: README.md
(+118 files in other folders)
