[project]
name = "base-camp"
version = "0.1.0"
description = "Base Camp - MCP Security Workshop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[dependency-groups]
dev = []

[tool.uv.sources]
base-camp-vulnerable = { path = "vulnerable-server", editable = true }
base-camp-secure = { path = "secure-server", editable = true }
