[project]
name = "module1-identity"
version = "0.1.0"
description = "Module 1 - Identity & Authentication with Azure Entra ID"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.2.2",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
module1-secure = { path = "secure-server", editable = true }
module1-vulnerable = { path = "vulnerable-server", editable = true }
module1-prm-demo = { path = "demo-client", editable = true }
