[project]
name = "camp3-io-security"
version = "0.1.0"
description = "Camp 3 - I/O Security for MCP Servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.0",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "pytest>=8.0.0"]

[tool.uv]
dev-dependencies = []
