[project]
name = "base-module-secure"
version = "0.1.0"
description = "Module 0 - Secure MCP Server (workshop demonstration)"
readme = "README.md"
requires-python = ">=3.10"

# Dependencies managed at module level (../pyproject.toml)
# This package is installed as editable via: uv sync

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
