[project]
name = "base-camp-vulnerable"
version = "0.1.0"
description = "Base Camp - Vulnerable MCP Server (for educational purposes)"
readme = "README.md"
requires-python = ">=3.10"

# Dependencies managed at camp level (../pyproject.toml)
# This package is installed as editable via: uv sync

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
